--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
     <meta charset="utf-8">
@@ -19,7 +19,6 @@
             b.innerHTMl = value;
         });
     </script>
-</p>
 <body>
     
 </body>
